Fixes:  Network logo to be a link to join url  Nerwork button in offers view  Headers align of Offers and Networks

--- a/components/com_ofrs/assets/css/site.css
+++ b/components/com_ofrs/assets/css/site.css
@@ -434,7 +434,7 @@ ul.pagination {
     color: #757f89;
     background-color: #ffffff;
 }
-.adnet-logo > img {
+.adnet-logo > a > img {
     height: 100%;
     width: 100%;
     object-fit: scale-down;
